--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,6 @@ set(CMAKE_CXX_STANDARD 11)
 
 add_executable(DelaunayTriangulation main.cpp)
 
+add_subdirectory(DelaunayT)
+add_subdirectory(DelaunayTests)
 add_subdirectory(googletest)
