Added DelaunayT construction based on adding points one by one. Also added update sequence for triangles and neighbours

--- a/DelaunayTests/CMakeLists.txt
+++ b/DelaunayTests/CMakeLists.txt
@@ -4,6 +4,7 @@ project(DelaunayTests)
 set(CMAKE_CXX_STANDARD 11)
 
 set(Sources
+        DelaunayTTest.cpp
         TriangleTest.cpp
         VectorTest.cpp
         VertexTest.cpp)
